--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,19 +9,19 @@
 
 
 body{
-    background: rgba(161, 0, 0, 0.76);
+    background: rgb(237, 85, 100);
     overflow-x: hidden;
 
     nav{
         height: 100px;
         width: 100vw;
         border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-        background: rgb(161, 0, 0);
+        background: rgb(214, 77, 90);
         display: flex;
         justify-content: center;
         align-items: center;
         position: fixed;
-        z-index: 100;
+        z-index: 1000;
 
         .search{
             display: flex;
@@ -52,200 +52,240 @@ body{
     }
 
     main{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        position: relative;
-        padding-top: 2rem;
-        gap: 2rem;
-        padding-top: 160px;
+        
 
-        .card{
+        .cardsContainer{
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 250px;
-            border-radius: 20px;
-        
-            .info{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 0.5rem;
-                background-color: rgba(0, 0, 0, 0.3);
-                width: 100%;
-                height: 70px;
-                padding: 0.6rem;
-                border-radius: 20px 20px 0px 0px;
-                
-        
-                .id, .name{
-                    font-family: "Pixelify Sans", sans-serif;
-                    font-size: 1.3rem;
-                    font-weight: 1000;
-                    color: #ffffff;
-                    text-transform: uppercase;
-                    text-align: center;
-                }
-            }
-        
-            .photo{
-                height: 250px;
-                width: 100%;
-                background-color: rgba(0, 0, 0, 0.2);
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                position: relative;
-                cursor: pointer;
-        
-                .photoBg{
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                }
-        
-                .normal{
-                    visibility: visible;
-                    width: 80%;
-                    height: 80%;
-                    position: absolute;
-                    transition: 500ms;
-                }
-        
-                .shiny{
-                    visibility: hidden;
-                    width: 80%;
-                    height: 80%;
-                    position: absolute;
-                    transition: 500ms;
-                }
+            justify-content: center;
+            flex-wrap: wrap;
+            position: relative;
+            padding-top: 2rem;
+            gap: 2rem;
+            padding-top: 160px;
 
-                &:hover{
-                    .normal{
-                        visibility: hidden;
-                        transition: 500ms;
-                    }
-            
-                    .shiny{
-                        visibility: visible;
-                        transition: 500ms;
-                    }
-                }
-            }
-        
-            
-        
-            .types{
-                display: flex;
-                justify-content: center;
-                gap: 0.7;
-                width: 100%;
-                background-color: rgba(0, 0, 0, 0.3);
-                border-radius: 0px 0px 20px 20px;
-                padding: 0.6rem;
-                gap: 2rem;
-        
-                .type{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border-radius: 20px;
-                    transition: 1s;
-        
-                    .typeIcon{
-                        display: flex;
-                        align-items: center;
-                        padding: 0.2rem 0.2rem;
-                        gap: 0.2rem;
-                        transition: 500ms;
-                        position: relative;
-        
-                        img{
-                            width: 30px;
-                            height: 30px;
-                            border-radius: 50%;
-                            transition: 1s;
-                        }
-        
-                        .typeName{
-                            font-size: 1rem;
-                            font-weight: 600;
-                            color: white;
-                            position: absolute;
-                            transform: translateX(-10%) rotateX(-90deg);
-                            visibility: hidden;
-                            transition: 0.1s;
-                            padding-right: 0.5rem;
-                        }
-
-                        &:hover{
-                            transition: 1.5s;
-            
-                            img {
-                                transform: rotate(360deg);
-                                transition: 1.5s;
-                            }
-                
-                            .typeName {
-                                position: relative;
-                                transform: translateX(0%) rotateX(0deg);
-                                visibility: visible;
-                                transition: 1s;
-                            }
-                        }
-                    }                    
-                }
-            }
-            
-            &:hover{
-                .photo > :not(.photoBg){
-                    transform: scale(1.1);
-                    transition: 500ms;
-                }
-            }
-        }
-
-        .moreInfo{
-            display: none;
-            visibility: hidden;
-            width: 90vw;
-            height: 80vh;
-            position: absolute;
-            background-color: black;
-            display: flex;
-            border-radius: 30px 30px 30px 30px;
-
-            .pokeInfo{
-                background-color: cyan;
-                height: 100%;
-                width: 25%;
+            .card{
                 display: flex;
                 flex-direction: column;
-                border-radius: 30px 0px 0px 30px;
-
-                .pokeInfoNameId{
-                    background-color: rgb(182, 20, 20);
+                align-items: center;
+                width: 250px;
+                border-radius: 20px;
+            
+                .info{
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    gap: 1rem;
+                    gap: 0.5rem;
+                    background-color: rgba(0, 0, 0, 0.3);
                     width: 100%;
-                    height: 80px;
-                    border-radius: 30px 0px 0px 0px;
+                    height: 70px;
+                    padding: 0.6rem;
+                    border-radius: 20px 20px 0px 0px;
                     
-
-                    .pokeInfoName, .pokeInfoId{
+            
+                    .id, .name{
                         font-family: "Pixelify Sans", sans-serif;
-                        font-size: 1.8rem;
+                        font-size: 1.3rem;
                         font-weight: 1000;
-                        color: #ffffff;
+                        color: #e6e9ed;
                         text-transform: uppercase;
                         text-align: center;
                     }
                 }
+            
+                .photo{
+                    height: 250px;
+                    width: 100%;
+                    background-color: rgba(0, 0, 0, 0.2);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    cursor: pointer;
+            
+                    .photoBg{
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                    }
+            
+                    .normal{
+                        visibility: visible;
+                        width: 80%;
+                        height: 80%;
+                        position: absolute;
+                        transition: 500ms;
+                    }
+            
+                    .shiny{
+                        visibility: hidden;
+                        width: 80%;
+                        height: 80%;
+                        position: absolute;
+                        transition: 500ms;
+                    }
+    
+                    &:hover{
+                        .normal{
+                            visibility: hidden;
+                            transition: 500ms;
+                        }
+                
+                        .shiny{
+                            visibility: visible;
+                            transition: 500ms;
+                        }
+                    }
+                }
+            
+                
+            
+                .types{
+                    display: flex;
+                    justify-content: center;
+                    gap: 0.7;
+                    width: 100%;
+                    background-color: rgba(0, 0, 0, 0.3);
+                    border-radius: 0px 0px 20px 20px;
+                    padding: 0.6rem;
+                    gap: 2rem;
+            
+                    .type{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: 20px;
+                        transition: 1s;
+            
+                        .typeIcon{
+                            display: flex;
+                            align-items: center;
+                            padding: 0.2rem 0.2rem;
+                            gap: 0.2rem;
+                            transition: 500ms;
+                            position: relative;
+            
+                            img{
+                                width: 30px;
+                                height: 30px;
+                                border-radius: 50%;
+                                transition: 1s;
+                            }
+            
+                            .typeName{
+                                font-size: 1rem;
+                                font-weight: 600;
+                                color: #e6e9ed;
+                                position: absolute;
+                                transform: translateX(-10%) rotateX(-90deg);
+                                visibility: hidden;
+                                transition: 0.1s;
+                                padding-right: 0.5rem;
+                            }
+    
+                            &:hover{
+                                transition: 1.5s;
+                
+                                img {
+                                    transform: rotate(360deg);
+                                    transition: 1.5s;
+                                }
+                    
+                                .typeName {
+                                    position: relative;
+                                    transform: translateX(0%) rotateX(0deg);
+                                    visibility: visible;
+                                    transition: 1s;
+                                }
+                            }
+                        }                    
+                    }
+                }
+                
+                &:hover{
+                    .photo > :not(.photoBg){
+                        transform: scale(1.1);
+                        transition: 500ms;
+                    }
+                }
             }
         }
+
+        .moreInfos{
+            visibility: hidden;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            z-index: 100;
+            background-color: #ffffff41;
+
+            .closeInfo{
+                position: absolute;
+                font-weight: 600;
+                font-size: 1.3rem;
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: rgb(214, 77, 90);
+                color: #e6e9ed;
+                cursor: pointer;
+                transition: .5s;
+                font-family: "Pixelify Sans", sans-serif;
+
+                &:hover{
+                    transform: rotate(360deg);
+                    transition: .5s;
+                }
+            }
+
+            .moreInfo{
+                position: absolute;
+                visibility: hidden;
+                width: 90%;
+                height: 80%;
+                background-color: black;
+                display: flex;
+                border-radius: 30px 30px 30px 30px;
+    
+                .pokeInfo{
+                    background-color: cyan;
+                    height: 100%;
+                    width: 25%;
+                    display: flex;
+                    flex-direction: column;
+                    border-radius: 30px 0px 0px 30px;
+    
+                    .pokeInfoNameId{
+                        background-color: rgb(182, 20, 20);
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 1rem;
+                        width: 100%;
+                        height: 80px;
+                        border-radius: 30px 0px 0px 0px;
+                        
+    
+                        .pokeInfoName, .pokeInfoId{
+                            font-family: "Pixelify Sans", sans-serif;
+                            font-size: 1.8rem;
+                            font-weight: 1000;
+                            color: #ffffff;
+                            text-transform: uppercase;
+                            text-align: center;
+                        }
+                    }
+                }
+            }
+        }
+
+        
     }
 }
 
