--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -53,7 +53,6 @@ body{
 
     main{
         
-
         .cardsContainer{
             display: flex;
             justify-content: center;
@@ -110,16 +109,16 @@ body{
             
                     .normal{
                         visibility: visible;
-                        width: 80%;
-                        height: 80%;
+                        width: 70%;
+                        height: 70%;
                         position: absolute;
                         transition: 500ms;
                     }
             
                     .shiny{
                         visibility: hidden;
-                        width: 80%;
-                        height: 80%;
+                        width: 70%;
+                        height: 70%;
                         position: absolute;
                         transition: 500ms;
                     }
@@ -211,10 +210,9 @@ body{
         }
 
         .moreInfos{
-            visibility: hidden;
             width: 100%;
             height: 100%;
-            position: absolute;
+            position: fixed;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -223,7 +221,6 @@ body{
             background-color: #ffffff41;
 
             .closeInfo{
-                position: absolute;
                 font-weight: 600;
                 font-size: 1.3rem;
                 width: 40px;
@@ -245,10 +242,8 @@ body{
             }
 
             .moreInfo{
-                position: absolute;
-                visibility: hidden;
-                width: 90%;
-                height: 80%;
+                width: 80%;
+                height: 70%;
                 background-color: black;
                 display: flex;
                 border-radius: 30px 30px 30px 30px;
