--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,10 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+}
 
 body{
     background: rgb(237, 85, 100);
@@ -136,8 +140,6 @@ body{
                     }
                 }
             
-                
-            
                 .types{
                     display: flex;
                     justify-content: center;
@@ -217,8 +219,9 @@ body{
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            gap: 1rem;
             z-index: 100;
-            background-color: #ffffff41;
+            background-color: #ffffff50;
 
             .closeInfo{
                 font-weight: 600;
@@ -229,27 +232,32 @@ body{
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                justify-self: flex-end;
+                align-self: flex-end;
+                margin-right: 11%;
                 background-color: rgb(214, 77, 90);
                 color: #e6e9ed;
                 cursor: pointer;
-                transition: .5s;
+                transition: 500ms;
                 font-family: "Pixelify Sans", sans-serif;
 
                 &:hover{
                     transform: rotate(360deg);
-                    transition: .5s;
+                    transition: 500ms;
                 }
             }
 
             .moreInfo{
                 width: 80%;
+                min-width: 1500px;
                 height: 70%;
-                background-color: black;
+                min-height: 650px;
+                background: rgb(237, 85, 100);
                 display: flex;
                 border-radius: 30px 30px 30px 30px;
     
                 .pokeInfo{
-                    background-color: cyan;
+                    background-color: rgba(0, 0, 0, 0.2);
                     height: 100%;
                     width: 25%;
                     display: flex;
@@ -257,7 +265,7 @@ body{
                     border-radius: 30px 0px 0px 30px;
     
                     .pokeInfoNameId{
-                        background-color: rgb(182, 20, 20);
+                        background-color: rgba(0, 0, 0, 0.3);
                         display: flex;
                         justify-content: center;
                         align-items: center;
@@ -274,6 +282,40 @@ body{
                             color: #ffffff;
                             text-transform: uppercase;
                             text-align: center;
+                        }
+                    }
+
+                    .infoPhoto{
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        position: relative;
+
+                        .infoSprite{
+                            width: 200px;
+                            height: 200px;
+                            position: absolute;
+                        }
+                    }
+                    
+                    .changeSpriteContainer{
+                        background-color: rgba(0, 0, 0, 0.2);
+                        width: 100%;
+                        height: 35px;
+                        display: flex;
+                        justify-content: space-around;
+                        align-items: center;
+
+                        .btnSprite{
+                            color: #e6e9ed;
+                            font-weight: 600;
+                            cursor: pointer;
+                            transition: 500ms;
+
+                            &:hover{
+                                transform: scale(1.1);
+                                transition: 500ms;
+                            }
                         }
                     }
                 }
