--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -6,6 +6,11 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 body {
   background: rgb(237, 85, 100);
   overflow-x: hidden;
@@ -182,8 +187,9 @@ body main .moreInfos {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  gap: 1rem;
   z-index: 100;
-  background-color: rgba(255, 255, 255, 0.2549019608);
+  background-color: rgba(255, 255, 255, 0.3137254902);
 }
 body main .moreInfos .closeInfo {
   font-weight: 600;
@@ -194,25 +200,30 @@ body main .moreInfos .closeInfo {
   display: flex;
   align-items: center;
   justify-content: center;
+  justify-self: flex-end;
+  align-self: flex-end;
+  margin-right: 11%;
   background-color: rgb(214, 77, 90);
   color: #e6e9ed;
   cursor: pointer;
-  transition: 0.5s;
+  transition: 500ms;
   font-family: "Pixelify Sans", sans-serif;
 }
 body main .moreInfos .closeInfo:hover {
   transform: rotate(360deg);
-  transition: 0.5s;
+  transition: 500ms;
 }
 body main .moreInfos .moreInfo {
   width: 80%;
+  min-width: 1500px;
   height: 70%;
-  background-color: black;
+  min-height: 650px;
+  background: rgb(237, 85, 100);
   display: flex;
   border-radius: 30px 30px 30px 30px;
 }
 body main .moreInfos .moreInfo .pokeInfo {
-  background-color: cyan;
+  background-color: rgba(0, 0, 0, 0.2);
   height: 100%;
   width: 25%;
   display: flex;
@@ -220,7 +231,7 @@ body main .moreInfos .moreInfo .pokeInfo {
   border-radius: 30px 0px 0px 30px;
 }
 body main .moreInfos .moreInfo .pokeInfo .pokeInfoNameId {
-  background-color: rgb(182, 20, 20);
+  background-color: rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -236,4 +247,33 @@ body main .moreInfos .moreInfo .pokeInfo .pokeInfoNameId .pokeInfoName, body mai
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
+}
+body main .moreInfos .moreInfo .pokeInfo .infoPhoto {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+body main .moreInfos .moreInfo .pokeInfo .infoPhoto .infoSprite {
+  width: 200px;
+  height: 200px;
+  position: absolute;
+}
+body main .moreInfos .moreInfo .pokeInfo .changeSpriteContainer {
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+body main .moreInfos .moreInfo .pokeInfo .changeSpriteContainer .btnSprite {
+  color: #e6e9ed;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 500ms;
+}
+body main .moreInfos .moreInfo .pokeInfo .changeSpriteContainer .btnSprite:hover {
+  transform: scale(1.1);
+  transition: 500ms;
 }/*# sourceMappingURL=style.css.map */
