--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -187,49 +187,41 @@ body main .moreInfos .closeInfo {
   justify-content: center;
   justify-self: flex-end;
   align-self: flex-end;
-  margin-right: 11%;
+  margin-right: 23.5%;
   background-color: rgb(214, 77, 90);
   color: #e6e9ed;
   cursor: pointer;
-  transition: 500ms;
+  transition: 300ms;
   font-family: "Pixelify Sans", sans-serif;
   border: 3px solid rgba(0, 0, 0, 0.3);
 }
 body main .moreInfos .closeInfo:hover {
   transform: rotate(360deg);
-  transition: 500ms;
+  transition: 300ms;
 }
 body main .moreInfos .moreInfo {
-  width: 80%;
-  min-width: 1500px;
-  max-width: 2000px;
-  height: 70%;
-  min-height: 650px;
-  max-height: 1200px;
-  background: rgb(237, 85, 100);
-  display: flex;
-  border-radius: 30px 30px 30px 30px;
-}
-body main .moreInfos .moreInfo .pokeInfo {
-  background-color: rgba(0, 0, 0, 0.2);
-  height: 100%;
-  width: 25%;
+  width: 50%;
+  min-width: 1000px;
+  height: 650px;
+  background-color: rgba(237, 85, 100, 0.6);
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
   display: flex;
   flex-direction: column;
-  border-radius: 30px 0px 0px 30px;
-  border: 3px solid rgba(0, 0, 0, 0.3);
+  border-radius: 30px 30px 30px 30px;
 }
-body main .moreInfos .moreInfo .pokeInfo .pokeInfoNameId {
+body main .moreInfos .moreInfo .pokeInfoNameId {
   background-color: rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1rem;
   width: 100%;
-  height: 13%;
-  border-radius: 27px 0px 0px 0px;
+  height: 12%;
+  border-radius: 27px 27px 0px 0px;
+  border: 3px solid rgba(0, 0, 0, 0.2);
 }
-body main .moreInfos .moreInfo .pokeInfo .pokeInfoNameId .pokeInfoName, body main .moreInfos .moreInfo .pokeInfo .pokeInfoNameId .pokeInfoId {
+body main .moreInfos .moreInfo .pokeInfoNameId .pokeInfoName, body main .moreInfos .moreInfo .pokeInfoNameId .pokeInfoId {
   font-family: "Pixelify Sans", sans-serif;
   font-size: 1.8rem;
   font-weight: 1000;
@@ -237,37 +229,78 @@ body main .moreInfos .moreInfo .pokeInfo .pokeInfoNameId .pokeInfoName, body mai
   text-transform: uppercase;
   text-align: center;
 }
-body main .moreInfos .moreInfo .pokeInfo .infoPhoto {
+body main .moreInfos .moreInfo .pokeEverything {
+  display: flex;
+  height: 88%;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo {
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0px 0px 0px 30px;
+  border: 3px solid rgba(0, 0, 0, 0.3);
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoPhoto {
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   height: 55%;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.3);
 }
-body main .moreInfos .moreInfo .pokeInfo .infoPhoto .infoSprite {
-  width: 300px;
-  height: 300px;
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoPhoto .infoSprite {
+  width: 260px;
+  height: 260px;
   position: absolute;
 }
-body main .moreInfos .moreInfo .pokeInfo .changeSpriteContainer {
-  background-color: rgba(0, 0, 0, 0.2);
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoPhoto .infoTypes {
+  display: flex;
+  justify-content: space-around;
+  padding: 0.3rem;
+  gap: 1rem;
+  position: absolute;
+  top: 2%;
+  right: 2%;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoPhoto .infoTypes .infoType {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoPhoto .infoTypes .infoType .infoTypeIcon {
+  display: flex;
+  align-items: center;
+  padding: 0.2rem 0.2rem;
+  gap: 0.2rem;
+  position: relative;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoPhoto .infoTypes .infoType .infoTypeIcon img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .changeSpriteContainer {
+  background-color: rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 7%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-body main .moreInfos .moreInfo .pokeInfo .changeSpriteContainer .btnSprite {
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .changeSpriteContainer .btnSprite {
   color: #e6e9ed;
   font-weight: 600;
   cursor: pointer;
-  transition: 500ms;
+  transition: 200ms;
 }
-body main .moreInfos .moreInfo .pokeInfo .changeSpriteContainer .btnSprite:hover {
-  transform: scale(1.1);
-  transition: 500ms;
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .changeSpriteContainer .btnSprite:hover {
+  transform: scale(1.05);
+  transition: 200ms;
 }
-body main .moreInfos .moreInfo .pokeInfo .infoMore {
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoMore {
   border-radius: 0px 0px 0px 30px;
   width: 100%;
   height: 38%;
@@ -277,121 +310,120 @@ body main .moreInfos .moreInfo .pokeInfo .infoMore {
   justify-content: center;
   gap: 0.5rem;
 }
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoMoreValues {
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoMore .infoMoreValues {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   gap: 0.9rem;
   width: 80%;
 }
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoMoreValues svg {
-  height: 40px;
-  width: 40px;
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoMore .infoMoreValues svg {
+  height: 2.5rem;
+  width: 2.5rem;
 }
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoMoreValues .infoMoreValuesText {
-  font-size: 1.2rem;
+body main .moreInfos .moreInfo .pokeEverything .pokeInfo .infoMore .infoMoreValues .infoMoreValuesText {
+  font-size: 1rem;
   font-weight: 600;
   color: #e6e9ed;
 }
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes {
-  display: flex;
-  justify-content: space-around;
-  width: 60%;
-  padding: 0.6rem;
-  gap: 2rem;
-}
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes .infoType {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  transition: 1s;
-}
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes .infoType .infoTypeIcon {
-  display: flex;
-  align-items: center;
-  padding: 0.2rem 0.2rem;
-  gap: 0.2rem;
-  transition: 500ms;
-  position: relative;
-}
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes .infoType .infoTypeIcon img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  transition: 1s;
-}
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes .infoType .infoTypeIcon .infoTypeName {
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: #e6e9ed;
-  position: absolute;
-  transform: translateX(-10%) rotateX(-90deg);
-  visibility: hidden;
-  transition: 0.1s;
-  padding-right: 1rem;
-}
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes .infoType .infoTypeIcon:hover {
-  transition: 1.5s;
-}
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes .infoType .infoTypeIcon:hover img {
-  transform: rotate(360deg);
-  transition: 1.5s;
-}
-body main .moreInfos .moreInfo .pokeInfo .infoMore .infoTypes .infoType .infoTypeIcon:hover .infoTypeName {
-  position: relative;
-  transform: translateX(0%) rotateX(0deg);
-  visibility: visible;
-  transition: 1s;
-}
-body main .moreInfos .moreInfo .pokeMore {
-  width: 75%;
+body main .moreInfos .moreInfo .pokeEverything .pokeMore {
+  width: 65%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  border-radius: 0px 30px 30px 0px;
-  border: 3px solid rgba(0, 0, 0, 0.3);
+  border-radius: 0px 0px 30px 0px;
   background-color: rgba(0, 0, 0, 0.2);
 }
-body main .moreInfos .moreInfo .pokeMore .moreLineUp {
-  width: 100%;
-  height: 65%;
-  padding-left: 1rem;
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoDescription {
+  height: 20%;
+  position: relative;
+  border: 3px solid rgba(0, 0, 0, 0.3);
+  padding: 1.2rem 1.2rem 0rem 1.2rem;
 }
-body main .moreInfos .moreInfo .pokeMore .moreLineUp .moreDescriptionText {
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoDescription .infoDescriptionTitle {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #e6e9ed;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0.2rem 2rem 0.4rem 1rem;
+  border-radius: 0px 0px 30px 0px;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoDescription .infoDescriptionText {
   font-size: 1.1rem;
   font-weight: 500;
-  color: #ffffff;
-}
-
-.infoStatus {
-  border-radius: 0px 0px 0px 30px;
-  width: 100%;
-  height: 38%;
+  color: #e6e9ed;
   display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoStats {
+  width: 100%;
+  height: 35%;
+  display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 0.2rem;
+  gap: 0.5rem;
+  padding: 1.2rem 1.2rem 0rem 1.2rem;
+  border: 3px solid rgba(0, 0, 0, 0.3);
+  position: relative;
 }
-.infoStatus .infoStat {
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoStats .infoStatsTitle {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #e6e9ed;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0.2rem 2rem 0.4rem 1rem;
+  border-radius: 0px 0px 30px 0px;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoStats .infoStat {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  width: 40%;
   gap: 0.2rem;
 }
-.infoStatus .infoStat .infoStatName {
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoStats .infoStat .infoStatName {
   color: #e6e9ed;
   font-weight: 600;
 }
-.infoStatus .infoStat .infoStatBar {
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoStats .infoStat .infoStatBar {
   width: 100%;
   height: 20px;
   border-radius: 20px;
-  border: 2px solid rgba(0, 0, 0, 0.2);
+  border: 2px solid rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
-.infoStatus .infoStat .infoStatBar .infoStatProgress {
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoStats .infoStat .infoStatBar .infoStatProgress {
   height: 100%;
-  background-color: rgb(255, 113, 31);
   border-radius: 30px 0px 0px 30px;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoEvolutions {
+  height: 45%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.2rem 1.2rem 0rem 1.2rem;
+  border: 3px solid rgba(0, 0, 0, 0.3);
+  border-radius: 0px 0px 27px 0px;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoEvolutions .infoEvolutionsTitle {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #e6e9ed;
+  font-weight: 600;
+  font-size: 1rem;
+  padding: 0.2rem 2rem 0.4rem 1rem;
+  border-radius: 0px 0px 30px 0px;
 }/*# sourceMappingURL=style.css.map */
