--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -482,6 +482,26 @@ body{
                                 padding: 0.2rem 2rem 0.4rem 1rem;
                                 border-radius: 0px 0px 30px 0px;
                             }
+
+                            .evolutionPhoto{
+                                width: 30%;
+                                height: 50%;
+                                position: relative;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+
+                                svg{
+                                    width: 180px;
+                                    height: 180px;
+                                }
+
+                                img{
+                                    position: absolute;
+                                    width: 160px;
+                                    height: 160px;
+                                }
+                            }
                         }
                     }
                 }
