--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -426,4 +426,21 @@ body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoEvolutions .infoEv
   font-size: 1rem;
   padding: 0.2rem 2rem 0.4rem 1rem;
   border-radius: 0px 0px 30px 0px;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoEvolutions .evolutionPhoto {
+  width: 30%;
+  height: 50%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoEvolutions .evolutionPhoto svg {
+  width: 180px;
+  height: 180px;
+}
+body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoEvolutions .evolutionPhoto img {
+  position: absolute;
+  width: 160px;
+  height: 160px;
 }/*# sourceMappingURL=style.css.map */
