--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -56,6 +56,9 @@ body main .cardsContainer .card {
   align-items: center;
   width: 250px;
   border-radius: 20px;
+  animation: appearCard linear;
+  animation-timeline: view();
+  animation-range: entry 0;
 }
 body main .cardsContainer .card .info {
   display: flex;
@@ -435,4 +438,15 @@ body main .moreInfos .moreInfo .pokeEverything .pokeMore .infoEvolutions .evolut
   position: absolute;
   width: 160px;
   height: 160px;
+}
+
+@keyframes appearCard {
+  from {
+    opacity: 0;
+    scale: 0.5;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }/*# sourceMappingURL=style.css.map */
